--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.21.2", features = ["rt", "macros"] }
+futures = "0.3.25"
+
+uuid = { version = "1.2.1", features = ["v4"] }
+
+axum = "0.6.0-rc.4"
