--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ tokio = { version = "1.21.2", features = ["rt", "macros"] }
 futures = "0.3.25"
 
 uuid = { version = "1.2.1", features = ["v4"] }
+dashmap = "5.4.0"
 
 axum = "0.6.0-rc.4"
