--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ uuid = { version = "1.2.1", features = ["v4"] }
 dashmap = "5.4.0"
 
 axum = "0.6.0-rc.4"
+serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
