--- a/demo/react-vite-demo/package.json
+++ b/demo/react-vite-demo/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "autoprefixer": "^10.4.13",
+    "moment": "^2.29.4",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
