--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,10 +8,28 @@ services:
       target: dist
     image: megaphone-be:latest
     deploy:
-      replicas: 5
+      replicas: 1
     init: true
     healthcheck:
       test: "echo"
       interval: 1s
     environment:
       - RUST_LOG=debug
+    ports:
+     - "3000:3000"
+  
+  chat:
+    build:
+      context: ..
+      dockerfile: docker/megaphone-chat.dockerfile
+    image: megaphone-chat:latest
+    ports:
+      - "3040:3040"
+
+  frontend:
+    build:
+      context: ..
+      dockerfile: docker/megaphone-chat-fe.dockerfile
+    image: megaphone-chat-fe:latest
+    ports:
+      - "3080:80"
