--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.10.0"
+log = "0.4.17"
+
 config = "0.13.2"
 thiserror = "1.0.37"
 tokio = { version = "1.21.2", features = ["rt", "macros"] }
