--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,12 @@ name = "megaphone"
 version = "0.3.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Davide Ghilardi <dghila@d71.dev>"]
+description = "Reverse proxy for long running requests and server streaming"
+keywords = [ "http", "reverse-proxy", "infrastructure", "cloud" ]
+repository = "https://github.com/dghilardi/megaphone"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 env_logger = "0.10.0"
