--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "cargo" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: "/megaphone" # Location of package manifests
     schedule:
       interval: "weekly"
   - package-ecosystem: "docker" # See documentation for possible values
