--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
         CARGO_ACCESS_TOKEN: ${{ secrets.CARGO_ACCESS_TOKEN }}
       run: |
         cargo login "$CARGO_ACCESS_TOKEN"
+        cd megaphone
         cargo publish
   push_to_registry:
     name: Push Docker image to Docker Hub
