--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         mkdir builds
     - name: Build Linux
       run: |
-        cargo cargo build --release --target=x86_64-unknown-linux-gnu
+        cargo build --release --target=x86_64-unknown-linux-gnu
         mkdir builds/megaphone-linux
         cp target/x86_64-unknown-linux-gnu/release/megaphone builds/megaphone-linux
         cp target/x86_64-unknown-linux-gnu/release/megaphone-operator builds/megaphone-operator-linux
