--- a/operator/kube/megaphone-crd.yml
+++ b/operator/kube/megaphone-crd.yml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: megaphone.d71.dev
+  name: megaphones.d71.dev
   namespace: default # For easier deployment and avoid permissions collisions on most clusters, the resource is namespace-scoped. More information at: https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/
 spec:
   group: d71.dev
