--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -10,15 +10,21 @@ repository = "https://github.com/dghilardi/megaphone"
 license = "MIT"
 readme = "README.md"
 
+[[bin]]
+doc = false
+name = "crdgen"
+path = "src/crdgen.rs"
+
 [dependencies]
-tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
-kube = { version = "0.86", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
-kube-derive = "0.86" # Support for Custom Resource Definitions
-kube-runtime = "0.86" # Custom controller support
-k8s-openapi = { version = "0.20", default-features = true, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
+anyhow = { version= "1.0.70", features = ["default"] }
+tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
+kube = { version = "0.86", features = ["runtime", "derive"] }
+k8s-openapi = { version = "0.20", default-features = true, features = ["v1_22"] }
+rustls = "0.21.0"
 futures = "0.3"
-# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-schemars = "0.8"
-thiserror = "1.0" # Custom Error definitions and convenient error mappings
+serde_yaml = "0.9.18"
+openssl = { version = "0.10.35", features = ["vendored"] }
+schemars = { version = "0.8", features = ["chrono"] }
+thiserror = "1.0"
