--- a/operator/kube/megaphone-crd.yml
+++ b/operator/kube/megaphone-crd.yml
@@ -2,30 +2,78 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: megaphones.d71.dev
-  namespace: default # For easier deployment and avoid permissions collisions on most clusters, the resource is namespace-scoped. More information at: https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/
 spec:
   group: d71.dev
   names:
+    categories: []
     kind: Megaphone
     plural: megaphones
+    shortNames: []
     singular: megaphone
-    shortNames:
-      - mgp
   scope: Namespaced
   versions:
-    - name: v1
-      served: true
-      storage: true
-      schema:
-        openAPIV3Schema:
-          type: object
-          properties:
-            spec: # There is only one (required) field named "replicas" specifying how many pods are created by the Operator
-              type: object
-              properties:
-                replicas:
-                  type: integer
-                  format: int32
-                image:
+  - additionalPrinterColumns: []
+    name: v1
+    schema:
+      openAPIV3Schema:
+        description: Auto-generated derived type for MegaphoneSpec via `CustomResource`
+        properties:
+          spec:
+            description: Spec object for Workload
+            properties:
+              image:
+                type: string
+              replicas:
+                format: uint
+                minimum: 0.0
+                type: integer
+              resources:
+                nullable: true
+                properties:
+                  limits:
+                    nullable: true
+                    properties:
+                      cpu:
+                        nullable: true
+                        type: string
+                      memory:
+                        nullable: true
+                        type: string
+                    type: object
+                  requests:
+                    nullable: true
+                    properties:
+                      cpu:
+                        nullable: true
+                        type: string
+                      memory:
+                        nullable: true
+                        type: string
+                    type: object
+                type: object
+            required:
+            - image
+            - replicas
+            type: object
+          status:
+            description: Status object for Workload
+            nullable: true
+            properties:
+              pods:
+                items:
                   type: string
-              required: ["replicas", "image"]
+                type: array
+            required:
+            - pods
+            type: object
+        required:
+        - spec
+        title: Megaphone
+        type: object
+    served: true
+    storage: true
+    subresources:
+      scale:
+        specReplicasPath: .spec.replicas
+        statusReplicasPath: .status.replicas
+      status: {}
