--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -23,5 +23,7 @@ futures = "0.3.25"
 dashmap = "5.4.0"
 
 axum = "0.6.20"
+metrics = "0.21.1"
+metrics-exporter-prometheus = "0.12.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
