--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -27,3 +27,5 @@ metrics = "0.21.1"
 metrics-exporter-prometheus = "0.12.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+lazy_static = "1.4.0"
+regex = "1.10.2"
