--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -29,3 +29,4 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 lazy_static = "1.4.0"
 regex = "1.10.2"
+chrono = { version = "0.4.31", features = ["serde"] }
