--- a/operator/kube/megaphone-demo.yml
+++ b/operator/kube/megaphone-demo.yml
@@ -5,7 +5,8 @@ metadata:
   namespace: default
 spec:
   replicas: 2
-  image: dghila/megaphone:0.3.9
+  image: dghila/megaphone:0.6.0
+  virtualAgentsPerNode: 3
   resources:
     limits:
       cpu: 20m
