create services in operator

--- a/operator/kube/megaphone-crd.yml
+++ b/operator/kube/megaphone-crd.yml
@@ -68,6 +68,11 @@ spec:
                 items:
                   type: string
                 type: array
+              services:
+                default: []
+                items:
+                  type: string
+                type: array
             required:
             - pods
             type: object
