--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -29,3 +29,4 @@ openssl = { version = "0.10.35", features = ["vendored"] }
 schemars = { version = "0.8", features = ["chrono"] }
 thiserror = "1.0"
 hex = "0.4.3"
+megaphone = { path = "../megaphone" }
