--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -30,3 +30,4 @@ schemars = { version = "0.8", features = ["chrono"] }
 thiserror = "1.0"
 hex = "0.4.3"
 megaphone = { path = "../megaphone" }
+tokio-util = "0.7.10"
