--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get -y install gcc-mingw-w64-x86-64 gcc-mingw-w64-i686
+        sudo apt-get -y install gcc-mingw-w64-x86-64 gcc-mingw-w64-i686 protobuf-compiler
         rustup target add x86_64-pc-windows-gnu
         rustup target add i686-pc-windows-gnu
         rustup target add x86_64-unknown-linux-gnu
