--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: build
 on:
   push:
     tags: ['*.*.*']
-
+env:
+  PROTOC_VERSION: 3.23.4
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,13 +14,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Install protoc
+      uses: taiki-e/install-action@v2
+      with:
+        tool: protoc@${{ env.PROTOC_VERSION }}
+
     - name: Run tests
       run: cargo test --verbose
 
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get -y install gcc-mingw-w64-x86-64 gcc-mingw-w64-i686 protobuf-compiler
+        sudo apt-get -y install gcc-mingw-w64-x86-64 gcc-mingw-w64-i686
         rustup target add x86_64-pc-windows-gnu
         rustup target add i686-pc-windows-gnu
         rustup target add x86_64-unknown-linux-gnu
