--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-
+  PROTOC_VERSION: 3.23.4
 jobs:
   build:
 
@@ -16,5 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install protoc
+      uses: taiki-e/install-action@v2
+      with:
+        tool: protoc@${{ env.PROTOC_VERSION }}
+
     - name: Run tests
       run: cargo test --verbose
