--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -31,3 +31,5 @@ thiserror = "1.0"
 hex = "0.4.3"
 megaphone = { version = "0.8.0", path = "../megaphone" }
 tokio-util = "0.7.10"
+rand = "0.8.5"
+regex = "1.10.2"
