--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -33,3 +33,5 @@ megaphone = { version = "0.8.0", path = "../megaphone" }
 tokio-util = "0.7.10"
 rand = "0.8.5"
 regex = "1.10.2"
+log = "0.4.20"
+env_logger = "0.10.1"
