[gh-actions] fix step name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         tool: protoc@${{ env.PROTOC_VERSION }}
 
-    - name: Install minimal nightly
+    - name: Install minimal stable
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
