--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -13,38 +13,38 @@ readme = "../README.md"
 [dependencies]
 chrono = { version = "0.4.31", features = ["serde"] }
 serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 anyhow = "1.0.75"
 rand = "0.8.5"
 
-env_logger = "0.10.0"
-log = "0.4.17"
+env_logger = { version = "0.10.0", optional = true }
+log = { version = "0.4.17", optional = true }
 
-config = "0.13.2"
-thiserror = "1.0.37"
-tokio = { version = "1.21.2", features = ["rt", "macros"] }
-futures = "0.3.25"
+config = { version = "0.13.2", optional = true }
+thiserror = { version = "1.0.37", optional = true }
+tokio = { version = "1.21.2", features = ["rt", "macros"], optional = true }
+futures = { version = "0.3.25", optional = true }
 
-dashmap = "5.4.0"
+dashmap = { version = "5.4.0", optional = true }
 
-axum = "0.6.20"
-hyperlocal = "0.8.0"
-metrics = "0.21.1"
-metrics-exporter-prometheus = "0.12.1"
-serde_json = "1.0.87"
-lazy_static = "1.4.0"
-regex = "1.10.2"
+axum = { version = "0.6.20", optional = true }
+hyperlocal = { version = "0.8.0", optional = true }
+metrics = { version = "0.21.1", optional = true }
+metrics-exporter-prometheus = { version = "0.12.1", optional = true }
+lazy_static = { version = "1.4.0", optional = true }
+regex = { version = "1.10.2", optional = true }
 
 
-clap = { version = "4.1.6", features = ["derive"] }
-hyper = "0.14.26"
+clap = { version = "4.1.6", features = ["derive"], optional = true }
+hyper = { version = "0.14.26", optional = true }
 
-tonic = "0.10"
-prost = "0.12"
-prost-types = "0.12.1"
+tonic = { version = "0.10", optional = true }
+prost = { version = "0.12", optional = true }
+prost-types = { version = "0.12.1", optional = true }
 
 [features]
-bin-server = []
-bin-cli = []
+bin-server = ["tokio", "futures", "thiserror", "config", "log", "env_logger", "axum", "metrics", "metrics-exporter-prometheus", "lazy_static", "tonic", "prost", "prost-types", "hyperlocal", "regex", "dashmap"]
+bin-cli = ["tokio",  "clap", "hyper", "hyperlocal"]
 
 [[bin]]
 name = "megactl"
