--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,9 @@ jobs:
         mkdir builds
     - name: Build Linux
       run: |
-        cargo build --release --target=x86_64-unknown-linux-gnu
+        cargo build --release --all-features --target=x86_64-unknown-linux-gnu
         mkdir builds/megaphone-linux
-        cp target/x86_64-unknown-linux-gnu/release/megaphone builds/megaphone-linux
+        cp target/x86_64-unknown-linux-gnu/release/server builds/megaphone-linux
         cp target/x86_64-unknown-linux-gnu/release/megaphone-operator builds/megaphone-operator-linux
         tar -C builds -czvf dist/megaphone-linux.tar.gz megaphone-linux
         tar -C builds -czvf dist/megaphone-operator-linux.tar.gz megaphone-operator-linux
