--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -58,5 +58,12 @@ required-features = ["bin-cli"]
 name = "server"
 required-features = ["bin-server"]
 
+[[example]]
+name = "demo-client"
+required-features = ["examples"]
+
+[dev-dependencies]
+reqwest = { version = "0.11.22", features = ["json"] }
+
 [build-dependencies]
 tonic-build = "0.10"
