--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -28,8 +28,8 @@ futures = { version = "0.3.25", optional = true }
 
 dashmap = { version = "5.4.0", optional = true }
 
-axum = { version = "0.6.20", optional = true }
-hyperlocal = { version = "0.8.0", optional = true }
+axum = { version = "0.7.3", optional = true }
+tower = { version = "0.4", features = ["util"], optional = true }
 metrics = { version = "0.21.1", optional = true }
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
@@ -37,22 +37,25 @@ regex = { version = "1.10.2", optional = true }
 
 
 clap = { version = "4.1.6", features = ["derive"], optional = true }
-hyper = { version = "0.14.28", optional = true }
-hyper-tls = { version = "0.5.0", optional = true }
+hyper = { version = "1.1.0", optional = true }
+hyper-util = { version = "0.1.0", features = ["http1"], optional = true }
+hyper-tls = { version = "0.6.0", optional = true }
+http-body-util = { version = "0.1.0", optional = true }
+hex = { version = "0.4.3", optional = true }
 
 tonic = { version = "0.10", optional = true }
 prost = { version = "0.12", optional = true }
 prost-types = { version = "0.12.1", optional = true }
 
 [features]
-bin-server = ["tokio", "futures", "thiserror", "config", "log", "env_logger", "axum", "metrics", "metrics-exporter-prometheus", "lazy_static", "tonic", "prost", "prost-types", "hyperlocal", "regex", "dashmap"]
-bin-cli = ["tokio",  "clap", "hyper", "hyperlocal"]
-client = ["log", "thiserror", "futures", "tokio", "tokio-stream", "hyper", "hyper-tls"]
+bin-server = ["tokio", "futures", "thiserror", "config", "log", "env_logger", "axum", "metrics", "metrics-exporter-prometheus", "lazy_static", "tonic", "prost", "prost-types", "tower", "hyper", "hyper-util", "http-body-util", "regex", "dashmap"]
+bin-cli = ["tokio",  "clap", "hyper"]
+client = ["log", "thiserror", "futures", "tokio", "tokio-stream", "hyper", "hyper-util", "http-body-util", "hyper-tls"]
 examples = ["client", "env_logger"]
 
 [[bin]]
 name = "megactl"
-required-features = ["bin-cli"]
+required-features = ["bin-cli", "hex"]
 
 [[bin]]
 name = "server"
