--- a/megaphone/Cargo.toml
+++ b/megaphone/Cargo.toml
@@ -43,6 +43,7 @@ hyper-tls = { version = "0.5.0", optional = true }
 tonic = { version = "0.10", optional = true }
 prost = { version = "0.12", optional = true }
 prost-types = { version = "0.12.1", optional = true }
+hex = "0.4.3"
 
 [features]
 bin-server = ["tokio", "futures", "thiserror", "config", "log", "env_logger", "axum", "metrics", "metrics-exporter-prometheus", "lazy_static", "tonic", "prost", "prost-types", "hyperlocal", "regex", "dashmap"]
