--- a/libs/megaphone-client/package.json
+++ b/libs/megaphone-client/package.json
@@ -2,8 +2,14 @@
   "name": "megaphone-client",
   "version": "0.9.3",
   "description": "Client library to subscribe megaphone channels",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+      "dist"
+   ],
   "scripts": {
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +29,7 @@
   "homepage": "https://github.com/dghilardi/megaphone#readme",
   "devDependencies": {
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
