--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,10 @@ required-features = ["bin-cli"]
 [build-dependencies]
 tonic-build = "0.11"
 
+[dev-dependencies]
+lazy_static = "1.4.0"
+tempfile = "3.10.1"
+
 [dev-dependencies.testcontainers]
 # version = "0.15.0"
 git = "https://github.com/dghilardi/testcontainers-rs.git"
