--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,8 @@ required-features = ["bin-cli"]
 tonic-build = "0.11"
 
 [dev-dependencies]
+kube = { version = "0.90.0", features = ["runtime", "derive"] }
+k8s-openapi = { version = "0.21.1", features = ["latest"] }
 lazy_static = "1.4.0"
 tempfile = "3.10.1"
 
