--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ kube = { version = "0.90.0", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.21.1", features = ["latest"] }
 lazy_static = "1.4.0"
 tempfile = "3.10.1"
+serial_test = "3.0.0"
 
 [dev-dependencies.testcontainers]
 # version = "0.15.0"
