--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ k8s-openapi = { version = "0.21.1", features = ["latest"] }
 lazy_static = "1.4.0"
 tempfile = "3.10.1"
 serial_test = "3.0.0"
+megaphone = { version = "0.10", features = ["client"] }
 
 [dev-dependencies.testcontainers]
 # version = "0.15.0"
