--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,5 +71,4 @@ megaphone = { version = "0.10", features = ["client"] }
 [dev-dependencies.testcontainers]
 # version = "0.15.0"
 git = "https://github.com/dghilardi/testcontainers-rs.git"
-branch = "dev"
-features = ["blocking"]
+branch = "feature/cgroupns-mode-userns-mode"
