--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,4 @@ serial_test = "3.1.1"
 megaphone = { version = "0.10", features = ["client"] }
 
 [dev-dependencies.testcontainers]
-# version = "0.15.0"
-git = "https://github.com/dghilardi/testcontainers-rs.git"
-branch = "feature/cgroupns-mode-userns-mode"
+version = "0.16.6"
